# dharma

./: .gitignore  makefile  pyproject.toml
.github/: build_docker.sh
.github/workflows/: build_docker.yaml
clap/: __main__.py  deploy_infra.py  docker_build.py  pydantic_models.py  register_zenml_stack.py
configs/zenml/: k8s_stack.yaml
data_collection/: Dockerfile  extract_data.py  ocr.py  ocr_vllm.py  pipeline.py  upload.py
helper/: constants.py  logger.py  minio.py  minio_paths.py
helper/pipeline_settings/: data_collection.py
infrastructure/: dependencies.py  deploy.py
infrastructure/12_persistent_claims/: Pulumi.12_persistent_claims.yaml  Pulumi.persistent_claims.yaml
infrastructure/13_prometheus/: Pulumi.13_prometheus.yaml  __main__.py
infrastructure/14_grafana/: Pulumi.14_grafana.yaml
infrastructure/15_vllm/: Pulumi.15_vllm.yaml  Pulumi.vllm.yaml  Pulumi.yaml  __main__.py
infrastructure/16_additional_secrets/: Pulumi.16_additional_secrets.yaml  Pulumi.additional_secrets.yaml  __main__.py
infrastructure/1_cluster/: Pulumi.1_cluster.yaml  Pulumi.cluster.yaml  __main__.py
infrastructure/2_argocd/: Pulumi.argocd.yaml  Pulumi.yaml  __main__.py
infrastructure/4_minio/: Pulumi.4_minio.yaml  Pulumi.minio.yaml  __main__.py
infrastructure/5_sql/: Pulumi.5_postgres.yaml  Pulumi.5_sql.yaml  Pulumi.sql.yaml
infrastructure/6_orchestrator/: Pulumi.6_orchestrator.yaml  Pulumi.orchestrator.yaml
infrastructure/7_arc_runner/: Pulumi.7_arc_runner.yaml  Pulumi.arc_runner.yaml
infrastructure/8_kube_prom_stack/: Pulumi.8_kube_prom_stack.yaml  Pulumi.kube_prom_stack.yaml  Pulumi.yaml  __main__.py
infrastructure/9_keda/: Pulumi.9_keda.yaml  Pulumi.keda.yaml  Pulumi.yaml  __main__.py
infrastructure/components/arc_scale_set/: gh_runners.py
infrastructure/components/argocd/: deploy_argocd.py
infrastructure/components/keda/: deploy_keda.py
infrastructure/components/kube_prom_stack/: deploy_kp.py
infrastructure/components/persistent_claims/: pv.py
infrastructure/configs/: config.yaml
infrastructure/helper/: constants.py  secrets.py
scripts/: detect_changes.sh
(+14 files in other folders)
